[gd_scene load_steps=7 format=2]

[ext_resource path="res://project/graphics/tileset.png" type="Texture" id=1]
[ext_resource path="res://project/overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://project/objects/structures/StructureBase.gd" type="Script" id=3]
[ext_resource path="res://project/utilities/StatusEffectHandler.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.3
height = 2.00001

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 0.0

[node name="StructureBase" type="StaticBody2D" groups=[
"Structure",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )
region_enabled = true

[node name="FirePosition" type="RemoteTransform2D" parent="."]
update_rotation = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 64
collision_mask = 36

[node name="StatusEffectHandler" parent="." instance=ExtResource( 5 )]

[node name="CatchFireArea" type="Area2D" parent="."]
position = Vector2( 0, -4 )
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchFireArea"]
shape = SubResource( 2 )

[connection signal="destroyed" from="." to="." method="_on_StructureBase_destroyed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="on_fire_changed" from="StatusEffectHandler" to="." method="_on_StatusEffectHandler_on_fire_changed"]
[connection signal="received_fire_damage" from="StatusEffectHandler" to="." method="_on_StatusEffectHandler_received_fire_damage"]
[connection signal="area_entered" from="CatchFireArea" to="." method="_on_CatchFireArea_area_entered"]

[editable path="Hurtbox"]
